src/main/java/com/example/product_store/authentication/errors/AccountNotFoundException.java
package com.example.product_store.authentication.errors;

public class AccountNotFoundException extends RuntimeException {
  public AccountNotFoundException(String message) {
    super(message);
  }
}
